# ofora

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/audit/: page.tsx
app/awards/: page.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/settings/: page.tsx
app/supplier/: page.tsx
contracts/generated-ofora-groth16-verifier/: Cargo.toml  README.md
contracts/generated-ofora-groth16-verifier/src/: lib.rs
contracts/generated-ofora-groth16-verifier/test_snapshots/test/: records_real_nova_verification_receipt.1.json  rejects_meridian_context_with_nova_proof.1.json  rejects_receipt_reuse.1.json  rejects_unauthorized_registry_consumption.1.json
contracts/ofora-registry/: Cargo.toml
contracts/ofora-registry/src/: events.rs  lib.rs  storage.rs  types.rs
contracts/ofora-registry/test_snapshots/test/: finalizes_nova_award_from_consumed_verification_receipt.1.json  rejects_atlas_selected_against_nova_receipt_context.1.json  rejects_receipt_reuse_across_registry_instances.1.json
docs/: architecture.md  demo-script.md  dorahacks-submission.md  local-demo.md  testnet-demo.md  zk-architecture.md
generated-verifier/: README.md
hooks/: use-gsap-context.ts  use-gsap-reveal.ts  use-lenis.ts
lib/: animation-config.ts  award-store.ts  evaluation-engine.ts  mock-data.ts  receipt-utils.ts  scoring.ts  submission-store.ts  types.ts  utils.ts  validation.ts  verification-evidence.ts
scripts/zk/commitment-tool/: Cargo.toml
scripts/zk/commitment-tool/src/: main.rs
zk/: Nargo.toml  Prover.toml.example
zk-groth16/: README.md  package-lock.json
(+168 files in other folders)
